Added syntax highlighting and page support. Changed directory structure.

--- a/templates/bootstrap/foot.html.twig
+++ b/templates/bootstrap/foot.html.twig
@@ -1,4 +1,7 @@
 <script src="{{ site_url }}/{{ template }}/js/jquery.min.js"></script>
 <script src="{{ site_url }}/{{ template }}/js/bootstrap.min.js"></script>
+<script>
+    hljs.initHighlightingOnLoad();
+</script>
 </body>
 </html>
