--- a/templates/bootstrap/footer.html.twig
+++ b/templates/bootstrap/footer.html.twig
@@ -1,5 +1,10 @@
 </div>
 
 <div class="bere-footer-container">
-    <p>made with love by <a href="https://beremaran.com">beremaran</a></p>
+    <p>
+        <a href="https://github.com/beremaran/bmd-blog">BMD Blog</a>
+        <br/>
+        made with <span style="color: red; margin-left: 2px; margin-right: 2px;">&hearts;</span> by <a
+                href="https://beremaran.com">beremaran</a>
+    </p>
 </div>
