--- a/templates/bootstrap/head.html.twig
+++ b/templates/bootstrap/head.html.twig
@@ -10,5 +10,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ site_url }}/{{ template }}/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="{{ site_url }}/{{ template }}/css/md-blog.css"/>
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 </head>
 <body>
