--- a/templates/bootstrap/css/md-blog.css
+++ b/templates/bootstrap/css/md-blog.css
@@ -12,14 +12,17 @@
     background-color: #222;
     width: 100%;
     min-width: 100%;
+    height: 100px;
     padding: 5px;
     color: #fff;
     text-align: center;
     text-decoration: none;
 }
 
-.bere-footer-container a {
-    color: #f7ebb3;
+.bere-footer-container p {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .pushdown-1p {
@@ -28,4 +31,9 @@
 
 .pushdown-10p {
     padding-top: 10%;
+}
+
+.post-title {
+    font-size: 1.2em;
+    margin-bottom: 0;
 }
